# plonky2-ecdsa

./: Cargo.toml  build.rs
src/: lib.rs
src/curve/: curve_msm.rs  curve_multiplication.rs  curve_summation.rs  glv.rs  mod.rs  p256.rs
src/ecdsa/: mod.rs  verify_static_pk.rs
src/field/: mod.rs  p256_base.rs  p256_scalar.rs
src/gadgets/: biguint.rs  curve.rs  ecdsa.rs  fixed_mul_static_q.rs  glv.rs  lookup_tables.rs  mod.rs  nonnative.rs
